# dataframe-of-mind

./: .env  .gitignore  .gitpod.yaml  .gitpod.yml  .pre-commit-config.yaml  README.md  exercise1.ipynb  explore_data.ipynb  pyproject.toml  spark-defaults.conf
.devcontainer/: Dockerfile  devcontainer.json
0-operational-vs-analytics/: README.md
1-operational-vs-analytic/: README.md  exercise1.ipynb  solution.ipynb
2-csv-from-hell/: README.md  generate_csv.py  solution.ipynb
3-basic-transforms/: README.md  generate_parquet.py  solution.ipynb  solution_spark.ipynb
4-window-aggregations/: README.md  solution.ipynb  solution_spark.ipynb
5-joins/: README.md  solution_polars.ipynb  solution_spark.ipynb
6-udf/: README.md  solution.ipynb  solution_polars.ipynb  solution_spark.ipynb
7-pipe/: README.md
demo-reading-data/: README.md  demo-reading-data.ipynb  generate_data.py
