[project]
name = "dataframe-of-mind"
version = "0.1.0"
description = ""
authors = [{ name = "Wouter Gins", email = "wouter.gins@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "Faker>=33.3.1,<41",
    "polars[plot]>=1.20",
    "pyspark>=3.5.4,<5",
    "pyarrow>=23.0.1",
    "graphviz>=0.20.3,<0.22",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "ipykernel>=6.29.4,<8",
]
